Fixed column spacing

--- a/Angular/src/app/components/offer/offer.component.css
+++ b/Angular/src/app/components/offer/offer.component.css
@@ -209,3 +209,7 @@ h3 {
 button {
     margin-right: 10px;
 }
+
+.fixed-table {
+    table-layout: fixed;
+}
